feat: implemention of substructure search in backend (with test structures only)
