# cmd/mb3server/api/openapi.yaml
@@ -267,6 +267,14 @@ paths:
         schema:
           $ref: '#/components/schemas/Contributor'
         style: form
+      - description: "Substructure to search for, in SMILES format."
+        explode: true
+        in: query
+        name: substructure
+        required: false
+        schema:
+          $ref: '#/components/schemas/Substructure'
+        style: form
       responses:
         "200":
           content:
@@ -661,6 +669,8 @@ components:
       - license
       - title
       type: object
+    Substructure:
+      type: string
     SearchResult:
       example:
         data:
